Misc fixes (#64)
- add line wrap to tooltips. there are a few cases where the word is a url (a mistake in the data i think), and doesn't wrap and pops out of tooltip.
- make metadata just regular react state instead of global variable
- separate use-query-params stuff into own wrapper component
- add some comments
- tweak meta api code
- make use of new truncate util in trajectory viz, to make text widths more consistent
- tweak footer
- get rid of "smartness" in "toHumanCase" util function. don't split by special characters, only split by space. preserves weird (mistakes in) data like urls and preceding slashes.
- add caching to "getWidth" util func to avoid measuring the same exact string twice (requires call to canvas)
- write new truncate util func that truncates string by actual width instead of char length

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -57,6 +57,10 @@ svg :focus {
 
 .tippy-content {
   line-height: 1.6;
+  --webkit-hyphens: auto;
+  hyphens: auto;
+  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 
 .tippy-content a:hover {
